src/styles/common.scss
@use "mixins" as m;
@use "variables" as v;
@use "tags";

/* TEXT ****************************************************/
.text-align-left { text-align : left; }
.text-align-center { text-align : center; }
.text-align-right { text-align : right; }
.text-align-justify { text-align : justify; }
.text-shadow-white { text-shadow : 0 0 1px white; }
.text-shadow-black { text-shadow : 0 0 1px black; }
/**************************************************** TEXT */

/* COLOR ***************************************************/
.color { color : v.$textColor; }
.color-cyan { color : cyan; }
.color-magenta { color : magenta; }
.color-yellow { color : yellow; }
.color-black { color : black; }
.color-red { color : red; }
.color-green { color : green; }
.color-blue { color : blue; }
.color-gray { color : gray; }
.color-light-gray { color : lightgray; }
.color-orange { color : orange; }
/*************************************************** COLOR */

/* BACKGROUND- *********************************************/
.background { background-color : v.$backgroundColor; }
.background-light { background-color : #f3f3f3; }
.background-gray { background-color : gray; }
/********************************************* BACKGROUND- */

/* BORDER- *************************************************/
.border { border : 1px solid v.$borderColorDefault; }
.border-top { border-top : 1px solid v.$borderColorDefault; }
.border-right { border-right : 1px solid v.$borderColorDefault; }
.border-bottom { border-bottom : 1px solid v.$borderColorDefault; }
.border-left { border-left : 1px solid v.$borderColorDefault; }

.border-radius-0p1 { border-radius : 0.1rem; }
.border-radius-0p2 { border-radius : 0.2rem; }
.border-radius-0p3 { border-radius : 0.3rem; }
.border-radius-0p4 { border-radius : 0.4rem; }
.border-radius-0p5 { border-radius : 0.5rem; }
.border-radius-1 { border-radius : 1rem; }
.border-radius-1p5 { border-radius : 1.5rem; }
.border-radius-2 { border-radius : 2rem; }
.border-radius-2p5 { border-radius : 2.5rem; }
.border-radius-3 { border-radius : 3rem; }

.border-color-cyan { border-color : cyan; }
.border-color-red { border-color : red; }
.border-color-yellow { border-color : yellow; }
.border-color-gray { border-color : gray; }
/************************************************* BORDER- */

/* MARGIN- *************************************************/
.m-0 { margin : 0; }
.m-0p5 { margin : 0.5rem; }
.m-1 { margin : 1rem; }
.m-1p5 { margin : 1.5rem; }
.m-2 { margin : 2rem; }
.m-2p5 { margin : 2.5rem; }
.m-3 { margin : 3rem; }

.mt-0 { margin-top : 0; }
.mt-0p1 { margin-top : 0.1rem; }
.mt-0p2 { margin-top : 0.2rem; }
.mt-0p3 { margin-top : 0.3rem; }
.mt-0p4 { margin-top : 0.4rem; }
.mt-0p5 { margin-top : 0.5rem; }
.mt-1 { margin-top : 1rem; }
.mt-2 { margin-top : 2rem; }
.mt-3 { margin-top : 3rem; }

.mr-0 { margin-right : 0; }
.mr-0p5 { margin-right : 0.5rem; }
.mr-1 { margin-right : 1rem; }
.mr-2 { margin-right : 2rem; }
.mr-3 { margin-right : 3rem; }

.mb-0 { margin-bottom : 0; }
.mb-0p1 { margin-bottom : 0.1rem; }
.mb-0p2 { margin-bottom : 0.2rem; }
.mb-0p3 { margin-bottom : 0.3rem; }
.mb-0p4 { margin-bottom : 0.4rem; }
.mb-0p5 { margin-bottom : 0.5rem; }
.mb-1 { margin-bottom : 1rem; }
.mb-2 { margin-bottom : 2rem; }
.mb-3 { margin-bottom : 3rem; }
.-mb-1 { margin-bottom : -1rem; }
.-mt-1 { margin-top : -1rem; }
.-mt-2 { margin-top : -2rem; }
.-mt-3 { margin-top : -3rem; }

.ml-0 { margin-left : 0; }
.ml-0p5 { margin-left : 0.5rem; }
.ml-1 { margin-left : 1rem; }
.ml-1p5 { margin-left : 1.5rem; }
.ml-2 { margin-left : 2rem; }
.ml-3 { margin-left : 3rem; }

.my-0 { margin-top : 0; margin-bottom : 0;}
.my-0p1 { margin-top : 0.1rem; margin-bottom : 0.1rem;}
.my-0p2 { margin-top : 0.2rem; margin-bottom : 0.2rem;}
.my-0p3 { margin-top : 0.3rem; margin-bottom : 0.3rem;}
.my-0p4 { margin-top : 0.4rem; margin-bottom : 0.4rem;}
.my-0p5 { margin-top : 0.5rem; margin-bottom : 0.5rem;}
.my-1 { margin-top : 1rem; margin-bottom : 1rem;}
.my-1p5 { margin-top : 1.5rem; margin-bottom : 1.5rem;}
.my-2 { margin-top : 2rem; margin-bottom : 2rem;}
.my-2p5 { margin-top : 2.5rem; margin-bottom : 2.5rem;}
.my-3 { margin-top : 3rem; margin-bottom : 3rem;}

.mx-0 { margin-left : 0; margin-right : 0;}
.mx-0p1 { margin-left : 0.1rem; margin-right : 0.1rem;}
.mx-0p2 { margin-left : 0.2rem; margin-right : 0.2rem;}
.mx-0p3 { margin-left : 0.3rem; margin-right : 0.3rem;}
.mx-0p4 { margin-left : 0.4rem; margin-right : 0.4rem;}
.mx-0p5 { margin-left : 0.5rem; margin-right : 0.5rem;}
.mx-1 { margin-left : 1rem; margin-right : 1rem;}
.mx-1p5 { margin-left : 1.5rem; margin-right : 1.5rem;}
.mx-2 { margin-left : 2rem; margin-right : 2rem;}
.mx-2p5 { margin-left : 2.5rem; margin-right : 2.5rem;}
.mx-3 { margin-left : 3rem; margin-right : 3rem;}
/************************************************* MARGIN- */

/* PADDING- ************************************************/
.p-0 { padding : 0; }
.p-0p1 { padding : 0.1rem; }
.p-0p2 { padding : 0.2rem; }
.p-0p3 { padding : 0.3rem; }
.p-0p4 { padding : 0.4rem; }
.p-0p5 { padding : 0.5rem; }
.p-1 { padding : 1rem; }
.p-1p5 { padding : 1.5rem; }
.p-2 { padding : 2rem; }
.p-2p5 { padding : 2.5rem; }
.p-3 { padding : 3rem; }

.pt-0 { padding-top : 0; }
.pt-0p1 { padding-top : 0.1rem; }
.pt-0p2 { padding-top : 0.2rem; }
.pt-0p3 { padding-top : 0.3rem; }
.pt-0p4 { padding-top : 0.4rem; }
.pt-0p5 { padding-top : 0.5rem; }
.pt-1 { padding-top : 1rem; }
.pt-1p5 { padding-top : 1.5rem; }
.pt-2 { padding-top : 2rem; }
.pt-2p5 { padding-top : 2.5rem; }
.pt-3 { padding-top : 3rem; }

.pl-0 { padding-left : 0; }
.pl-0p1 { padding-left : 0.1rem; }
.pl-0p2 { padding-left : 0.2rem; }
.pl-0p3 { padding-left : 0.3rem; }
.pl-0p4 { padding-left : 0.4rem; }
.pl-0p5 { padding-left : 0.5rem; }
.pl-1 { padding-left : 1rem; }
.pl-1p5 { padding-left : 1.5rem; }
.pl-2 { padding-left : 2rem; }
.pl-2p5 { padding-left : 2.5rem; }
.pl-3 { padding-left : 3rem; }

.pb-0 { padding-bottom : 0; }
.pb-0p1 { padding-bottom : 0.1rem; }
/* ... */

